--- a/package.json
+++ b/package.json
@@ -1,37 +1,23 @@
 {
   "name": "sukhuma",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.18",
     "expo": "~54.0.12",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
-    "expo-splash-screen": "~31.0.10",
+    "expo-dev-client": "~6.0.13",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.8",
+    "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-worklets": "0.5.1",
-    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "react-test-renderer": "19.1.0",
-    "typescript": "~5.9.2"
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
