--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
