--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.545.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
