--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.18",
+    "cors": "^2.8.5",
+    "env": "^0.0.2",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
     "expo-status-bar": "~3.0.8",
+    "express": "^5.1.0",
+    "groq-sdk": "^0.33.0",
     "lucide-react-native": "^0.545.0",
     "ngrok": "^5.0.0-beta.2",
+    "nodemon": "^3.1.10",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-input-select": "^2.1.8",
