--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "env": "^0.0.2",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
+    "expo-font": "~14.0.9",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
     "groq-sdk": "^0.33.0",
