--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
     "groq-sdk": "^0.33.0",
+    "jspdf": "^3.0.3",
     "lucide-react-native": "^0.545.0",
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.10",
