--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "env": "^0.0.2",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
